--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
   </div>
 </section>
 
+<section class="game">
+Wejdź w poniższy link: <br>
+<a href="https://solangelogames.neocities.org/">https://solangelogames.neocities.org/</a>
+</section>
+
 <footer class="footer">
     <div class="footer-content">
         <p>© 2025 Cosmo_inc. Wszelkie prawa zastrzeżone.</p>
